fix(frontend): fix missing overflow hidden on tags

--- a/frontend_lib/src/component/Tags/TagList.styl
+++ b/frontend_lib/src/component/Tags/TagList.styl
@@ -26,6 +26,7 @@
         position relative
         right 20px
         text-align left
+        overflow hidden
       &__circle
         width 10px
         height 10px
